# theTekCowboysFlaskReact

./: .env  .env.bu  .gitignore  Dockerfile.api  package-lock.json  package.json
api/: .gitignore  api.py  pyproject.toml  requirements.txt  setup.py
api/api/: .env  __init__.py
api/api.egg-info/: PKG-INFO  top_level.txt
api/api/automation/: send_email.py  update_youtube_json.py
api/api/data/: todo.db
api/api/decorators/: __init__.py
api/api/general_ledger/: models.py  routes.py
api/api/helpers/: __init__.py
api/api/home/: routes.py
api/api/jwt_token/: __token_required__.py  routes.py
api/api/mail_in_service/: models.py  routes.py  serializers_helpers.py
api/api/point/: models.py  routes.py
api/api/repair_service/: __init__.py  models.py  routes.py
api/api/repairs/: models.py  routes.py
api/api/shopify/: routes.py
api/api/site_user/: models.py  routes.py
api/api/todo/: credentials.json  models.py  routes.py  token.json
api/api/tools/: csv_to_json_vocab.py
api/api/user/: __init__.py  models.py  routes.py
api/api/videos/: client_secret.json  routes.py
api/api/vocab/: routes.py
api/api/web_service/: models.py  routes.py
api/migrations/versions/: 1e43fe918b16_added_work_order.py  638671028845_.py  84c62c8bb1bc_.py  8cc638a52fba_.py  8e4dccf12a0d_added_repair_and_work_order_table.py  ab90a4031bfa_.py  bc1659502352_changed_received_by_as_nullable_for_.py  bcaeacc15786_.py  f7df24f46daa_.py
api/tools/: csv_to_json_vocab.py
api/tools/csv_files/: passjapanesetest.com_N3_Grammar-sjis.csv  passjapanesetest.com_N4_Grammar.csv  (+1 more)
(+175 files in other folders)
